Create artworks collection section

--- a/index.html
+++ b/index.html
@@ -106,36 +106,67 @@
             </section>
 
             <!-- TRANSFORM YOUR DIGITAL PRESENCE -->   
-            <section id="value" class="py-5 text-center">
+            <section id="value" class="my-5 py-5 text-center">
                 <div class="container">
                     
-                <h2 class="mb-4 text-center">Transform Your Digital Presence</h2>
-                <p class="txt">Stand out from the competition with a unique and compelling design</p>
+                <h2 class="mb-2 text-center">Transform Your Digital Presence</h2>
+                <p class="mb-5 txt">Stand out from the competition with a unique and compelling design</p>
 
                 <div class="">
-
-                    <div class="row bg-dark rounded-4 pt-2 pb-2 pl-4 pr-4">
+                    <!-- Content with large padding on left and right -->
+                    <div class="row bg-dark rounded-4 py-2 px-3">
                         <div class="col-12 col-md-4  d-flex flex-column justify-content-center align-items-center">
                             <img src="images/icon-1.png" class="img-fluid icon-value" alt="">
-                            <p class="icon-text mt-2 text-white">We transform your ideas into stunning digital
+                            <p class="icon-text mt-2 text-white px-2">We transform your ideas into stunning digital
                                 experiences with creativity.</p>
                         </div>
 
                         <div class="col-12 col-md-4  d-flex flex-column justify-content-center align-items-center">
                             <img src="images/icon-4.png" class="img-fluid icon-value" alt="">
-                            <p class="icon-text mt-2 text-white">Our artistic focus sets your business apart from
-                                competitors.</p>
+                            <p class="icon-text mt-2 text-white px-2">Our artistic focus sets your business apart from
+                                others competitors.</p>
                         </div>
 
                         <div class="col-12 col-md-4  d-flex flex-column justify-content-center align-items-center">
                             <img src="images/icon-3.png" class="img-fluid icon-value" alt="">
-                            <p class="icon-text mt-2 text-white">Our story-driven approach creates a unique brand
+                            <p class="icon-text mt-2 text-white px-2">Our story-driven approach creates a unique brand
                                 experience.</p>
                         </div>
                     </div>
                 </div>
             </div>
             </section>
+
+            <section class="my-2">
+                <div class="container text-center">
+                    <img src="images/line.png" class="img-fluid my-5" alt="">
+
+                    <h2 class="mb-2">Artworks Collection</h2>
+                    <p class="txt mb-5">See how Code Concept has transformed visions into reality</p>
+
+                    <div class="row mb-4">
+                        <!-- Images Collection -->
+                        <div class="col-6 col-md-4">
+                            <img class="img-fluid top-left-rounded bottom-right-rounded" src="images/artwork-1.jpg"
+                                alt="">
+                        </div>
+                        <div class="col-6 col-md-4 align-self-center">
+                            <img class="img-fluid" src="images/artwork-2.png" alt="">
+                        </div>
+                        <div class="col-6 col-md-4 align-self-center">
+                            <img class="img-fluid" src="images/artwork-3.jpg" alt="">
+                        </div>
+                        <div class="col-6 col-md-4 align-self-center">
+                            <img class="img-fluid" src="images/artwork-4.png" alt="">
+                        </div>
+                        <div class="col-6 col-md-4 align-self-center">
+                            <img class="img-fluid" src="images/artwork-5.png" alt="">
+                        </div>
+                        <div class="col-6 col-md-4 align-self-center">
+                            <img class="img-fluid top-left-rounded bottom-right-rounded" src="images/artwork-6.jpg"
+                                alt="">
+                        </div>
+                    </div>
 
             
 
