--- a/contact-us.html
+++ b/contact-us.html
@@ -1,14 +1,92 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Code Concept</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Contact Us</h1>
+</head>
+
+<body>
+    <!-- Skip links -->
+    <ul class="visually-hidden-focusable">
+        <li><a class="visually-hidden-focusable" href="#nav">Skip to navigation</a></li>
+        <li><a class="visually-hidden-focusable" href="#main">Skip to main content</a></li>
+    </ul>
+
+    <!-- MAIN WRAPPER - BACKGROUND-->
+    <div class="main-wrapper">
+        <header role="banner" class="nav-bg">
+            <!-- bg-dark removed and top-fixed -->
+            <nav role="navigation" id="nav" class="navbar navbar-expand-lg pt-2 gradient">
+                <div class="container">
+                    <a class="navbar-brand" href="#">
+                        <img class="logo" src="images/logo.svg" title="Code Concept logo"
+                            alt="Illustration for Code Concept logo">
+                    </a>
+
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="text-white nav-link active txt" aria-current="page" href="#">Showroom</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="text-white nav-link txt" href="/our-studio.html">Our Studio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="text-white nav-link txt" href="/contact-us.html">Contact Us</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <!-- d-lg-none added to hide on large screens -->
+                    <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="offcanvas"
+                        data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                    <div class="d-lg-none offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                        aria-labelledby="offcanvasDarkNavbarLabel">
+                        <div class="offcanvas-header">
+                            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">MENU</h5>
+                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                                aria-label="Close"></button>
+                        </div>
+
+                        <div class="offcanvas-body">
+                            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                                <li class="nav-item">
+                                    <a class="text-white active txt" aria-current="page" href="#">Showroom</a>
+                                </li>
+                                <li class="nav-item txt">
+                                    <a class="text-white nav-link" href="#">Our Studio</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="text-white nav-link dropdown-toggle txt" href="#" role="button"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        Masterpieces
+                                    </a>
+                                    <ul class="dropdown-menu dropdown-menu-dark">
+                                        <li><a class="dropdown-item" href="#">Web Design</a></li>
+                                        <li><a class="dropdown-item" href="#">Branding</a></li>
+                                        <li><a class="dropdown-item" href="#">Graphic Design</a></li>
+                                        <li><a class="dropdown-item" href="#">UX/UI Design</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </header>
+        <main id="main" role="main">
+          <h1>Inspire? - Contact Us</h1>
+        </main>
+      </div> <!--Main wrapper-->  
 
     <!-- Bootstrap cdn link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
