--- a/index.html
+++ b/index.html
@@ -78,11 +78,6 @@
                                     </ul>
                                 </li>
                             </ul>
-
-                            <!-- <form class="d-flex mt-3" role="search">
-                                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                                <button class="btn btn-success" type="submit">Search</button>
-                            </form> -->
                         </div>
                     </div>
                 </div>
@@ -297,7 +292,7 @@
             </section>
 
 
-            <!-- Footer -->
+            <!-- FOOTER -->
             <footer role="contentinfo" class="bg-dark text-white pt-4 pb-4 gradient-footer">
                 <div class="container ">
                     <div class="row d-flex align-items-center">
