--- a/our-studio.html
+++ b/our-studio.html
@@ -1,16 +1,268 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Code Concept</title>
-    <link href="css/style.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Our Studio</h1>
 
-    <!-- Bootstrap cdn link -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Code Concept</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href="css/style.css" rel="stylesheet">
+</head>
+
+<body>
+  <!-- Skip links -->
+  <ul class="visually-hidden-focusable">
+    <li><a class="visually-hidden-focusable" href="#nav">Skip to navigation</a></li>
+    <li><a class="visually-hidden-focusable" href="#main">Skip to main content</a></li>
+  </ul>
+
+  <!-- MAIN WRAPPER - BACKGROUND-->
+  <div class="main-wrapper">
+    <header role="banner" class="nav-bg mb-4">
+      <!-- bg-dark removed and top-fixed -->
+      <nav role="navigation" id="nav" class="navbar navbar-expand-lg pt-2 gradient">
+        <div class="container">
+          <a class="navbar-brand" href="#">
+            <img class="logo" src="images/logo.svg" title="Code Concept logo" alt="Illustration for Code Concept logo">
+          </a>
+
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="text-white nav-link txt" href="/index.html">Showroom</a>
+              </li>
+              <li class="nav-item">
+                <a class="text-white nav-link active txt" aria-current="page" href="#">Our Studio</a>
+              </li>
+              <li class="nav-item">
+                <a class="text-white nav-link txt" href="/contact-us.html">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- d-lg-none added to hide on large screens -->
+          <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="d-lg-none offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+            aria-labelledby="offcanvasDarkNavbarLabel">
+            <div class="offcanvas-header">
+              <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">MENU</h5>
+              <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                aria-label="Close"></button>
+            </div>
+
+            <div class="offcanvas-body">
+              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item">
+                  <a class="text-white active txt" aria-current="page" href="#">Showroom</a>
+                </li>
+                <li class="nav-item txt">
+                  <a class="text-white nav-link" href="#">Our Studio</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="text-white nav-link dropdown-toggle txt" href="#" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    Masterpieces
+                  </a>
+                  <ul class="dropdown-menu dropdown-menu-dark">
+                    <li><a class="dropdown-item" href="#">Web Design</a></li>
+                    <li><a class="dropdown-item" href="#">Branding</a></li>
+                    <li><a class="dropdown-item" href="#">Graphic Design</a></li>
+                    <li><a class="dropdown-item" href="#">UX/UI Design</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <main id="main" role="main">
+      <section class="intro text-center">
+        <div class="container">
+          <h1 class="pt-5 mb-4 txt">Our Studio</h1>
+          <div class="row">
+            <div class="col-lg-12">
+              <p>At CODE CONCEPT, Media Studio will deliver creative solutions that are clean, simple, and stunning that
+                will make your business stand out among others.Our Media Studio focuses on artistic small businesses
+                looking to establish a solid online presence that differentiates them from their competitors through
+                unique and story-driven designs.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- WHAT WE LOVE TO DO(INTRO): MISSION AND VISION  -->
+      <section class="py-5 text-center">
+        <div class="container">
+          <h2 class="mb-4 txt">What We Love to do</h2>
+          <p class="col-lg-12 mb-4">We love blending creativity with technology to create unique digital
+            experiences.From bespoke web designs and interactive platforms to stunning photography, we transform ideas
+            into beautiful,compelling stories. Our passion for excellence ensures we exceed our clients' expectations
+            every time.</p>
+
+          <div class="row mb-4">
+            <!-- MISSION -->
+            <div class="col-sm-6 col-md-12 col-lg-6 ">
+              <div class="d-flex flex-column justify-content-center align-items-center">
+                <img class="img-fluid mission-img top-left-rounded bottom-right-rounded" src="images/mission.png"
+                  alt="">
+
+                <p class="p-5">Our mission is to empower artists and creatives by providing them with stunning web
+                  solutions that enhance their online presence and engage their audience. We strive to deliver
+                  exceptional quality and innovative designs that reflect the true essence of our clients' vision.</p>
+              </div>
+            </div>
+
+            <!-- VISION -->
+            <div class="col-sm-6 col-md-12 col-lg-6 ">
+              <div class="d-flex flex-column justify-content-center align-items-center">
+                <img class="img-fluid mission-img top-left-rounded bottom-right-rounded" src="images/vision.png" alt="">
+
+                <p class="p-5">Our vision is to become the go-to digital studio for artists, photographers, and
+                  crafters, known for our creative excellence and ability to turn ideas into remarkable digital
+                  masterpieces. We aim to foster a community where creativity and technology seamlessly blend.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- OUR ARTISAN -->
+      <section class="text-center ">
+        <div class="container bg-dark rounded-4">
+          <div class="row align-items-center g-5 pb-5">
+            <div class="col-lg-6">
+              <h2 class="mb-3 pt-5 txt text-white">Our Artisan</h2>
+              <p class="txt text-white">Meet our Mastermind - Melissa Flores</p>
+              <p class="mb-3 text-white px-4">As the founder and creative force behind Code Concept, Melissa brings a
+                unique blend of artistic talent and technical expertise to every project. With a deep passion for design
+                and a commitment to excellence, she works closely with each client to ensure their vision comes to life
+                in the digital realm. </p>
+              <blockquote class="px-5 text-white blockquote">
+                <p>"Being creative allows me to express my thoughts and emotions with the world without limitations.
+                  Photography is my primary tool for capturing unique moments that tell a story without using words. I
+                  also enjoy crafting, as it enables me to create meaningful and personalized creations with my own
+                  personal touch. I like to explore various forms of craft (painting, calligraphy, origami, etc.).
+                  With my expertise and abilities, I can assure my clients that I will deliver creative solutions that
+                  are clean, simple, and stunning that will stand out their business among the competition. Together, we
+                  can envision a unique story blending your company's success and my design, photography, and web skills
+                  to ensure your customers have a remarkable experience". - Melissa Flores</p>
+              </blockquote>
+            </div>
+
+            <div class="col-lg-6">
+              <img src="images/our-artisan.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
+                loading="lazy">
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- ARTIST STATEMENTS -->
+      <section id="values" class="mt-5 pt-5 text-center">
+        <div class="container">
+          <h2 class="mb-3 text-center">Artists Statements</h2>
+          <p class="txt mb-5">Discover the impact of our creative solutions through the words of our valued clients</p>
+
+          <div class="reviews">
+            <div class="row">
+              <div class="py-5 col-12 col-md-4 d-flex flex-column justify-content-center align-items-center">
+                <img src="images/testimonial-catherine.png" class="img-fluid icon-value rounded-circle"
+                  alt="Icon image with a monitor that conains a pencil, brush and rule ilustration">
+                <p class="icon-text mt-4 ">“Code Concept transformed my photography business with a stunning portfolio
+                  site. Their attention to detail and understanding of my vision were incredible. Highly recommend!”
+                  <br>— Catherine Mooney, Photographer
+                </p>
+              </div>
+
+              <div class="py-5 col-12 col-md-4 d-flex flex-column justify-content-center align-items-center">
+                <img src="images/testimonial-carl.png" class="img-fluid icon-value"
+                  alt="Icon image with a paint palette ilustration">
+                <p class="icon-text mt-4 ">"Code Concept beautifully captured my brand and helped me reach a broader
+                  audience. Melissa's creativity and expertise are unmatched!"<br> — Carl Thompson, Crafter</p>
+              </div>
+
+              <div class="py-5 col-12 col-md-4 d-flex flex-column justify-content-center align-items-center">
+                <img src="images/testimonial-damian.png" class="img-fluid icon-value"
+                  alt="Icon image with a frame ilustration">
+                <p class="icon-text mt-4 ">"Code Concept brought my digital art portfolio to life with an innovative and
+                  captivating design. Their blend of creativity and technical expertise is remarkable."
+                  <br> — Damian Sule, Concept Artist
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- FOOTER -->
+      <footer role="contentinfo" class="bg-dark text-white pt-4 pb-4 gradient-footer ">
+        <div class="container ">
+          <div class="row d-flex align-items-center">
+            <!-- Column 1 -->
+            <div class="col-6 col-md-3 mb-4">
+              <ul class="list-unstyled">
+                <li><a href="#" class="text-white text-decoration-none custom-links">Showroom</a></li>
+                <li><a href="#" class="text-white text-decoration-none custom-links">Masterpieces</a>
+                </li>
+                <li><a href="#" class="text-white text-decoration-none custom-links">Our Studio</a></li>
+                <li><a href="#" class="text-white text-decoration-none custom-links">Art Resources</a>
+                </li>
+              </ul>
+            </div>
+            <!-- Column 2 -->
+            <div class="col-6 col-md-3 mb-4">
+              <ul class="list-unstyled">
+                <li><a href="#" class="text-white text-decoration-none custom-links">Gallery</a></li>
+                <li><a href="#" class="text-white text-decoration-none custom-links">Artworks
+                    Collection</a></li>
+                <li><a href="#" class="text-white text-decoration-none custom-links">Featured
+                    Artists</a></li>
+                <li><a href="#" class="text-white text-decoration-none custom-links">Artist
+                    Statements</a></li>
+              </ul>
+            </div>
+            <!-- Column 3 -->
+            <div class="col-6 col-md-3 mb-4">
+              <ul class="list-unstyled">
+                <li><a href="#" class="text-white text-decoration-none custom-links">Inspired?</a></li>
+                <li><a href="#" class="text-white text-decoration-none custom-links">Connect with Us</a>
+                </li>
+                <li><a href="#" class="text-white text-decoration-none custom-links">FAQs</a></li>
+                <li><a href="#" class="text-white text-decoration-none custom-links">Want to Join
+                    Us?</a></li>
+              </ul>
+            </div>
+            <!-- Column 4 -->
+            <div class="col-6 col-md-3 mb-4">
+              <ul class="list-unstyled">
+                <li><a href="#" class="text-white text-decoration-none custom-links">More
+                    information:</a></li>
+                <li><a href="#" class="text-white text-decoration-none custom-links">Artworks
+                    Collection</a></li>
+                <li><a href="#" class="text-white text-decoration-none custom-links">Terms of
+                    Services</a></li>
+                <li><a href="#" class="text-white text-decoration-none custom-links">Privacy Policiy</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <p class="text-center">&copy; 2024 | Code Concept</p>
+        </div>
+      </footer>
+
+    </main>
+  </div> <!--Main wrapper-->
+  <!-- Bootstrap cdn link -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
