Update url of index menu

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <!-- bg-dark removed and top-fixed -->
             <nav role="navigation" id="nav" class="navbar navbar-expand-lg pt-2 gradient">
                 <div class="container">
-                    <a class="navbar-brand" href="/index.html">
+                    <a class="navbar-brand" href="index.html">
                         <img class="logo" src="images/logo.svg" title="Code Concept logo"
                             alt="Illustration for Code Concept logo">
                     </a>
@@ -34,10 +34,10 @@
                                 <a class="nav-link active txt" aria-current="page" href="#">Showroom</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link txt" href="/our-studio.html">Our Studio</a>
+                                <a class="nav-link txt" href="our-studio.html">Our Studio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link txt" href="/contact-us.html">Contact Us</a>
+                                <a class="nav-link txt" href="contact-us.html">Contact Us</a>
                             </li>
                         </ul>
                     </div>
@@ -63,7 +63,7 @@
                                     <a class="nav-link active txt" aria-current="page" href="#">Showroom</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link txt" href="/our-studio.html">Our Studio</a>
+                                    <a class="nav-link txt" href="our-studio.html">Our Studio</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle txt" href="#" role="button"
@@ -78,7 +78,7 @@
                                     </ul>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link txt" href="/contact-us.html">Contact Us</a>
+                                    <a class="nav-link txt" href="contact-us.html">Contact Us</a>
                                 </li>
                             </ul>
                         </div>
