--- a/contact-us.html
+++ b/contact-us.html
@@ -23,7 +23,7 @@
             <!-- bg-dark removed and top-fixed -->
             <nav role="navigation" id="nav" class="navbar navbar-expand-lg pt-2 gradient">
                 <div class="container">
-                    <a class="navbar-brand" href="/index.html">
+                    <a class="navbar-brand" href="index.html">
                         <img class="logo" src="images/logo.svg" title="Code Concept logo"
                             alt="Illustration for Code Concept logo">
                     </a>
@@ -31,13 +31,13 @@
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link txt" href="/index.html">Showroom</a>
+                                <a class="nav-link txt" href="index.html">Showroom</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link txt" href="#">Our Studio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link txt active" aria-current="page" href="/contact-us.html">Contact
+                                <a class="nav-link txt active" aria-current="page" href="contact-us.html">Contact
                                     Us</a>
                             </li>
                         </ul>
@@ -61,10 +61,10 @@
                         <div class="offcanvas-body">
                             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                                 <li class="nav-item">
-                                    <a class="nav-link txt" href="/index.html">Showroom</a>
+                                    <a class="nav-link txt" href="index.html">Showroom</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link txt" href="/our-studio.html">Our Studio</a>
+                                    <a class="nav-link txt" href="our-studio.html">Our Studio</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle txt" href="#" role="button"
@@ -79,7 +79,7 @@
                                     </ul>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link txt active" aria-current="page" href="/contact-us.html">Contact
+                                    <a class="nav-link txt active" aria-current="page" href="contact-us.html">Contact
                                         Us</a>
                                 </li>
                             </ul>
