--- a/our-studio.html
+++ b/our-studio.html
@@ -23,20 +23,20 @@
       <!-- bg-dark removed and top-fixed -->
       <nav role="navigation" id="nav" class="navbar navbar-expand-lg pt-2 gradient">
         <div class="container">
-          <a class="navbar-brand" href="/index.html">
+          <a class="navbar-brand" href="index.html">
             <img class="logo" src="images/logo.svg" title="Code Concept logo" alt="Illustration for Code Concept logo">
           </a>
 
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link txt" href="/index.html">Showroom</a>
+                <a class="nav-link txt" href="index.html">Showroom</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active txt" aria-current="page" href="#">Our Studio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link txt" href="/contact-us.html">Contact Us</a>
+                <a class="nav-link txt" href="contact-us.html">Contact Us</a>
               </li>
             </ul>
           </div>
@@ -58,7 +58,7 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link txt" href="/index.html">Showroom</a>
+                  <a class="nav-link txt" href="index.html">Showroom</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active txt" aria-current="page" href="#">Our Studio</a>
@@ -76,7 +76,7 @@
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link txt" href="/contact-us.html">Contact Us</a>
+                  <a class="nav-link txt" href="contact-us.html">Contact Us</a>
               </li>
               </ul>
             </div>
