--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 
 <body>
@@ -93,13 +95,14 @@
                 <div class="container hero">
                     <div class="d-flex justify-content-center align-items-center">
                         <div class="text-center">
-                            <h1 class="mb-4 display-1 fw-bold">Crafting your ideas into <br />
-                                <span class="text-white display-1 fw-bold">
+                            <h1 class="mb-4 display-1 fw-bold">Crafting your ideas into <br>
+                                <span class="text-white display-2 fw-bold">
                                     masterpiece solutions
                                 </span>
                             </h1>
-                            <button role="button" class="btn btn-primary txt rounded-pill mt-5" type="button">Get in
-                                Touch</button>
+                            <button role="button"
+                                class="btn btn-primary txt rounded-pill mt-5 py-2 animate__animated animate__bounce"
+                                type="button">Get in Touch</button>
                         </div>
                     </div>
                 </div>
@@ -109,14 +112,14 @@
             <section id="values" class="mt-5 pt-5 text-center">
                 <div class="container">
                     <h2 class="mb-3 text-center">Transform Your Digital Presence</h2>
-                    <h3 class="txt mb-5">Stand out from the competition with a unique and compelling design</h3>
+                    <p class="txt mb-5">Stand out from the competition with a unique and compelling design</p>
 
                     <div class="bg-dark rounded-4 p-5">
                         <div class="row">
                             <div
                                 class="py-5 col-12 col-md-4 d-flex flex-column justify-content-center align-items-center">
                                 <img src="images/icon-1.png" class="img-fluid icon-value"
-                                    alt="Icon image with a monitor that conains a pencil, brush and rule ilustration">
+                                    alt="Icon image with a monitor that contains a pencil, brush and ruler illustration">
                                 <p class="icon-text mt-4 text-white">We transform your ideas into stunning digital
                                     experiences with creativity.</p>
                             </div>
@@ -124,7 +127,7 @@
                             <div
                                 class="py-5 col-12 col-md-4 d-flex flex-column justify-content-center align-items-center">
                                 <img src="images/icon-2.png" class="img-fluid icon-value"
-                                    alt="Icon image with a paint palette ilustration">
+                                    alt="Icon image with a paint palette illustration">
                                 <p class="icon-text mt-4 text-white">Our artistic focus sets your business apart from
                                     other competitors.</p>
                             </div>
@@ -132,7 +135,7 @@
                             <div
                                 class="py-5 col-12 col-md-4 d-flex flex-column justify-content-center align-items-center">
                                 <img src="images/icon-3.png" class="img-fluid icon-value"
-                                    alt="Icon image with a frame ilustration">
+                                    alt="Icon image with a frame illustration">
                                 <p class="icon-text mt-4 text-white">Our story-driven approach creates a unique brand
                                     experience.</p>
                             </div>
@@ -148,7 +151,7 @@
                     <img src="images/line.png" class="img-fluid mb-5" alt="ilustration of a curvy line">
 
                     <h2 class="mt-2 mb-3">Artworks Collection</h2>
-                    <h3 class="txt mb-5">See how Code Concept has transformed visions into reality</h3>
+                    <p class="txt mb-5">See how Code Concept has transformed visions into reality</p>
 
                     <div class="row mb-4">
                         <!-- Images Collection -->
@@ -160,7 +163,7 @@
                             <img class="img-fluid" src="images/artwork-2.png"
                                 alt="Image showing an artist template design">
                             <img class="img-fluid tape" src="images/tape-blue.svg"
-                                alt="Decorative ilustration with shape of a tape">
+                                alt="Decorative illustration with shape of a tape">
                         </div>
                         <div class="col-6 col-md-4 align-self-center">
                             <img class="img-fluid" src="images/artwork-3.jpg" alt="Image showing a moodboard template">
@@ -173,7 +176,7 @@
                             <img class="img-fluid" src="images/artwork-5.png"
                                 alt="Image showing a media design website">
                             <img class="img-fluid tape-two" src="images/tape-green.svg"
-                                alt="Decorative ilustration with shape of a tape">
+                                alt="Decorative illustration with shape of a tape">
                         </div>
                         <div class="col-6 col-md-4 align-self-center">
                             <img class="img-fluid top-left-rounded bottom-right-rounded" src="images/artwork-6.jpg"
@@ -196,7 +199,7 @@
                 <div class="container">
 
                     <h2 class="mt-2 mb-3">Masterpieces</h2>
-                    <h3 class="txt mb-5">Explore the potential of our services and let's work together </h3>
+                    <p class="txt mb-5">Explore the potential of our services and let's work together </p>
 
                     <div class="row">
 
@@ -237,7 +240,7 @@
                         <div class="col-12 col-sm-6 col-lg-3 p-2">
                             <div class="card text-bg-dark service-rounded service">
                                 <img src="images/service-graphic-design.jpeg" class="card-img-top px-4 pt-4 img-fluid"
-                                    alt="...">
+                                    alt="Image of a desk with a monitor, a keyboard, glasses, notebook, pencil and office stationery items">
                                 <div class="card-body">
                                     <h3 class="card-title txt">Graphic Design</h3>
                                     <p class="card-text">Engage your audience with stunning digital designs that
@@ -251,7 +254,8 @@
                         <div class="col-12 col-sm-6 col-lg-3 p-2">
 
                             <div class="card text-bg-dark service-rounded service">
-                                <img src="images/service-ux-ui-design.jpeg" class="card-img-top px-4 pt-4" alt="...">
+                                <img src="images/service-ux-ui-design.jpeg" class="card-img-top px-4 pt-4"
+                                    alt="Image illustration of UX/UI design with shapes of desktop and mobile device templates">
                                 <div class="card-body">
                                     <h3 class="card-title txt">UX/UI Design</h3>
                                     <p class="card-text">Enhance user experience with intuitive and aesthetically
@@ -268,91 +272,130 @@
             <section class="mt-5 py-5 text-center">
                 <div class="container">
 
-                    <h2 class="mt-2 mb-3">Featured Artists</h2>
+                    <h2 class="mt-2 mb-3 ">Featured Artists</h2>
                     <p class="txt mb-5">Join our vibrant community That trusts Code Concept to bring their visions to
                         life</p>
 
                     <div class="row mb-4 d-flex align-items-center">
-                        
-                        <div class="col-xs-12 col-md-4 position-tape categories left d-flex flex-column justify-content-center align-items-center mb-4 mt-4">
-                            <img class="feature-image " src="images/crafter.jpg"
+
+                        <div
+                            class="col-xs-12 col-md-4 position-tape categories left d-flex flex-column justify-content-center align-items-center mb-4 mt-4">
+                            <img class="feature-image mb-4 mt-4 " src="images/crafter.jpg"
                                 alt="Image showing hands of a craftsman molding clay">
-                            <img class="img-fluid tape-crafter" id="tape-craft" src="images/tape-blue.svg"
+                            <img class=" img-fluid tape-crafter" id="tape-craft" src="images/tape-blue.svg"
                                 alt="Decorative ilustration with shape of a tape">
-                            <p><a href="#" class="text-reset text-decoration-none">&lt;/Crafters/&gt;</a></p>
+                            <p><a href="#" class="text-reset text-decoration-none txt fw-bold">&lt;/Crafters/&gt;</a>
+                            </p>
                         </div>
-                        <div class="col-xs-12 col-md-4 categories d-flex flex-column justify-content-center align-items-center mb-4 mt-4">
+                        <div
+                            class="col-xs-12 col-md-4 categories d-flex flex-column justify-content-center align-items-center mb-4 mt-4">
                             <img class="feature-image mb-4 mt-4" src="images/photographer.jpg"
                                 alt="Image showing hands of a photographer holding the camera">
-                            <p><a href="#" class="text-reset text-decoration-none">&lt;/Photographers/&gt;</a></p>
+                            <p><a href="#"
+                                    class="text-reset text-decoration-none txt fw-bold">&lt;/Photographers/&gt;</a></p>
                         </div>
-                        <div class="col-xs-12 col-md-4 categories right d-flex flex-column justify-content-center align-items-center mb-4 mt-4">
-                            <img class="feature-image categories mb-4 mt-4" src="images/digital-artist.jpg" alt="Image of a digital artist drawing on a tablet">
-                            <p><a href="#" class="text-reset text-decoration-none">&lt;/Digital Artists/&gt;</a></p>
+                        <div
+                            class="col-xs-12 col-md-4 categories right d-flex flex-column justify-content-center align-items-center mb-4 mt-4">
+                            <img class="feature-image categories mb-4 mt-4" src="images/digital-artist.jpg"
+                                alt="Image of a digital artist drawing on a tablet">
+                            <p><a href="#" class="text-reset text-decoration-none txt fw-bold">&lt;/Digital
+                                    Artists/&gt;</a></p>
                         </div>
-                    </div> 
-                </div>     
+                    </div>
+                </div>
             </section>
 
 
             <!-- FOOTER -->
-            <footer role="contentinfo" class="bg-dark text-white pt-4 pb-4 gradient-footer">
-                <div class="container ">
-                    <div class="row d-flex align-items-center">
+            <footer role="contentinfo" class="bg-dark pt-5 pb-3 gradient-footer">
+                <div class="container">
+                    <div class="row align-items-center justify-content-center">
                         <!-- Column 1 -->
-                        <div class="col-6 col-md-3 mb-4">
+                        <div class="col-6 col-md-3 mb-4 nav-bar">
                             <ul class="list-unstyled">
-                                <li><a href="#" class="text-white text-decoration-none custom-links">Showroom</a></li>
-                                <li><a href="#" class="text-white text-decoration-none custom-links">Masterpieces</a>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="index.html">Showroom</a>
                                 </li>
-                                <li><a href="#" class="text-white text-decoration-none custom-links">Our Studio</a></li>
-                                <li><a href="#" class="text-white text-decoration-none custom-links">Art Resources</a>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Masterpieces</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="our-studio.html">Our Studio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Art Resources</a>
                                 </li>
                             </ul>
                         </div>
+
                         <!-- Column 2 -->
-                        <div class="col-6 col-md-3 mb-4">
+                        <div class="col-6 col-md-3 mb-4 nav-bar">
                             <ul class="list-unstyled">
-                                <li><a href="#" class="text-white text-decoration-none custom-links">Gallery</a></li>
-                                <li><a href="#" class="text-white text-decoration-none custom-links">Artworks
-                                        Collection</a></li>
-                                <li><a href="#" class="text-white text-decoration-none custom-links">Featured
-                                        Artists</a></li>
-                                <li><a href="#" class="text-white text-decoration-none custom-links">Artist
-                                        Statements</a></li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Gallery</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Artworks Collection</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Featured Artists</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Artist Statements</a>
+                                </li>
                             </ul>
                         </div>
                         <!-- Column 3 -->
-                        <div class="col-6 col-md-3 mb-4">
+                        <div class="col-6 col-md-3 mb-4 nav-bar">
                             <ul class="list-unstyled">
-                                <li><a href="#" class="text-white text-decoration-none custom-links">Inspired?</a></li>
-                                <li><a href="#" class="text-white text-decoration-none custom-links">Connect with Us</a>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Get Inspired</a>
                                 </li>
-                                <li><a href="#" class="text-white text-decoration-none custom-links">FAQs</a></li>
-                                <li><a href="#" class="text-white text-decoration-none custom-links">Want to Join
-                                        Us?</a></li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="contact-us.html">Connect with Us</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">FAQs</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Want to Join Us?</a>
+                                </li>
                             </ul>
                         </div>
                         <!-- Column 4 -->
                         <div class="col-6 col-md-3 mb-4">
                             <ul class="list-unstyled">
-                                <li><a href="#" class="text-white text-decoration-none custom-links">More
-                                        information:</a></li>
-                                <li><a href="#" class="text-white text-decoration-none custom-links">Artworks
-                                        Collection</a></li>
-                                <li><a href="#" class="text-white text-decoration-none custom-links">Terms of
-                                        Services</a></li>
-                                <li><a href="#" class="text-white text-decoration-none custom-links">Privacy Policiy</a>
+                                <li class="">
+                                    <p class="text-white text-decoration-none">More information:</p>
+                                </li>
+                                <li class="d-flex nav-item align-items-center">
+                                    <a class="nav-link px-1" href="https://www.linkedin.com/">
+                                        <img src="/images/prueva.svg" title="LinkedIn"></a>
+                                    <a class="nav-link" href="https://github.com/">
+                                        <img src="/images/github.svg" title="GitHub"></a>
+                                    <a class="nav-link" href="https://www.instagram.com/">
+                                        <img src="/images/instagram.svg" title="Instagram"></a>
+                                    <a class="nav-link" href="#">
+                                        <img src="/images/email.svg" title="Email"></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Terms of Services</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Privacy Policiy</a>
                                 </li>
                             </ul>
                         </div>
+                        <div class="col-12 col-md-12 mb-4">
+                            <p class="text-center text-white">&copy; 2024 | Code Concept</p>
+                        </div>
                     </div>
-                    <p class="text-center">&copy; 2024 | Code Concept</p>
                 </div>
             </footer>
         </main>
 
     </div> <!--Main wrapper-->
+
     <!-- Bootstrap cdn link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
