Fixed path of images in footer

--- a/contact-us.html
+++ b/contact-us.html
@@ -40,7 +40,8 @@
                                 <a class="nav-link text-uppercase" href="our-studio.html">Our Studio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-uppercase active" aria-current="page" href="contact-us.html">Contact
+                                <a class="nav-link text-uppercase active" aria-current="page"
+                                    href="contact-us.html">Contact
                                     Us</a>
                             </li>
                         </ul>
@@ -82,7 +83,8 @@
                                     </ul>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-uppercase active" aria-current="page" href="contact-us.html">Contact
+                                    <a class="nav-link text-uppercase active" aria-current="page"
+                                        href="contact-us.html">Contact
                                         Us</a>
                                 </li>
                             </ul>
@@ -215,7 +217,8 @@
                             <div
                                 class="py-5 col-12 col-md-12 col-lg-4 flex-column justify-content-center align-items-center">
                                 <a href="#" class="text-decoration-none custom-link">
-                                    <img src="images/icons-linkedin.png" class="img-fluid icon-value rounded-circle follow"
+                                    <img src="images/icons-linkedin.png"
+                                        class="img-fluid icon-value rounded-circle follow"
                                         alt="Icon image with linkedin logo">
                                     <p class=" follow icon-text mt-4 ">LinkedIn</p>
                                 </a>
@@ -307,13 +310,13 @@
                                 </li>
                                 <li class="d-flex nav-item align-items-center">
                                     <a class="social-icon nav-link px-1" href="https://www.linkedin.com/">
-                                        <img src="/images/linkedin.svg" title="LinkedIn"></a>
+                                        <img src="images/linkedin.svg" title="LinkedIn"></a>
                                     <a class="social-icon nav-link" href="https://github.com/">
-                                        <img src="/images/github.svg" title="GitHub"></a>
+                                        <img src="images/github.svg" title="GitHub"></a>
                                     <a class="social-icon nav-link" href="https://www.instagram.com/">
-                                        <img src="/images/instagram.svg" title="Instagram"></a>
+                                        <img src="images/instagram.svg" title="Instagram"></a>
                                     <a class="social-icon nav-link" href="#">
-                                        <img src="/images/email.svg" title="Email"></a>
+                                        <img src="images/email.svg" title="Email"></a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Terms of Services</a>
@@ -343,8 +346,8 @@
     <script>
         ScrollReveal().reveal('.headline', { delay: 200 });
     </script>
-    
-    
+
+
 </body>
 
 </html>
