--- a/index.html
+++ b/index.html
@@ -302,8 +302,7 @@
                                         srcset="images/service-ux-ui-design-600_x_400.jpeg">
                                     <source media="(min-width: 769px)"
                                         srcset="images/service-ux-ui-design-1200_x_800.jpeg">
-                                    <img class="card-img-top px-4 pt-4"
-                                        src="images/service-ux-ui-design-600_x_400.jpeg"
+                                    <img class="card-img-top px-4 pt-4" src="images/service-ux-ui-design-600_x_400.jpeg"
                                         alt="Image illustration of UX/UI design with shapes of desktop and mobile device templates">
                                 </picture>
                                 <div class="card-body">
@@ -334,8 +333,7 @@
                             <picture>
                                 <source media="(max-width: 768px)" srcset="images/crafter-600_x_628.png">
                                 <source media="(min-width: 769px)" srcset="images/crafter-1200_x_1257.png">
-                                <img class="feature-image mb-1 mt-4"
-                                    src="images/crafter-600_x_628.png"
+                                <img class="feature-image mb-1 mt-4" src="images/crafter-600_x_628.png"
                                     alt="Image showing hands of a craftsman molding clay">
                             </picture>
                             <p><a href="#"
@@ -347,8 +345,7 @@
                             <picture>
                                 <source media="(max-width: 768px)" srcset="images/photographer-600_x_628.png">
                                 <source media="(min-width: 769px)" srcset="images/photographer-1200_x_1257.png">
-                                <img class="feature-image mb-1 mt-4"
-                                    src="images/photographer-600_x_628.png"
+                                <img class="feature-image mb-1 mt-4" src="images/photographer-600_x_628.png"
                                     alt="Image showing hands of a photographer holding the camera">
                             </picture>
                             <p><a href="#"
@@ -360,8 +357,7 @@
                             <picture>
                                 <source media="(max-width: 768px)" srcset="images/digital-artist-600_x_628.png">
                                 <source media="(min-width: 769px)" srcset="images/digital-artist-1200_x_1257.png">
-                                <img class="feature-image mb-1 mt-4"
-                                    src="images/digital-artist-600_x_628.png"
+                                <img class="feature-image mb-1 mt-4" src="images/digital-artist-600_x_628.png"
                                     alt="Image of a digital artist drawing on a tablet">
                             </picture>
                             <p><a href="#" class="text-decoration-none text-uppercase fw-bold custom-link">&lt;/Digital
@@ -436,13 +432,13 @@
                                 </li>
                                 <li class="d-flex nav-item align-items-center">
                                     <a class="social-icon nav-link px-1" href="https://www.linkedin.com/">
-                                        <img src="/images/linkedin.svg" title="LinkedIn"></a>
+                                        <img src="images/linkedin.svg" title="LinkedIn"></a>
                                     <a class="social-icon nav-link" href="https://github.com/">
-                                        <img src="/images/github.svg" title="GitHub"></a>
+                                        <img src="images/github.svg" title="GitHub"></a>
                                     <a class="social-icon nav-link" href="https://www.instagram.com/">
-                                        <img src="/images/instagram.svg" title="Instagram"></a>
+                                        <img src="images/instagram.svg" title="Instagram"></a>
                                     <a class="social-icon nav-link" href="#">
-                                        <img src="/images/email.svg" title="Email"></a>
+                                        <img src="images/email.svg" title="Email"></a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Terms of Services</a>
