--- a/our-studio.html
+++ b/our-studio.html
@@ -294,13 +294,13 @@
                 </li>
                 <li class="d-flex nav-item align-items-center">
                   <a class="social-icon nav-link px-1" href="https://www.linkedin.com/">
-                    <img src="/images/linkedin.svg" title="LinkedIn"></a>
+                    <img src="images/linkedin.svg" title="LinkedIn"></a>
                   <a class="social-icon nav-link" href="https://github.com/">
-                    <img src="/images/github.svg" title="GitHub"></a>
+                    <img src="images/github.svg" title="GitHub"></a>
                   <a class="social-icon nav-link" href="https://www.instagram.com/">
-                    <img src="/images/instagram.svg" title="Instagram"></a>
+                    <img src="images/instagram.svg" title="Instagram"></a>
                   <a class="social-icon nav-link" href="#">
-                    <img src="/images/email.svg" title="Email"></a>
+                    <img src="images/email.svg" title="Email"></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Terms of Services</a>
